2015-09-23  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSXMLParser.m:
	* Tests/base/NSXMLParser/ParseData/quoted-entities.result
	* Tests/base/NSXMLParser/ParseData/quoted-entities.xml
	Turn on substitution of entities to match OSX behavior, add tests.

2015-09-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSData.h:
	* Source/Additions/GSObjCRuntime.m:
	* Source/GSFFCallInvocation.m:
	* Source/GSFormat.m:
	* Source/GSValue.m:
	* Source/NSArchiver.m:
	* Source/NSData.m:
	* Source/NSDecimalNumber.m:
	* Source/NSKeyValueObserving.m:
	* Source/NSKeyedArchiver.m:
	* Source/NSKeyedUnarchiver.m:
	* Source/NSMethodSignature.m:
	* Source/NSPortCoder.m:
	* Source/NSUnarchiver.m:
	* Source/cifframe.m:
	Implement support for C99 _Bool type.

2015-09-22 Riccardo Mottola <rm@gnu.org>

	* Headers/GNUstepBase/GSBlocks.h
	Do not enable weak on mingw, because it works only with ELF.

2015-09-18 Riccardo Mottola <rm@gnu.org>

	* Headers/Foundation/NSError.h
	* Source/NSError.m
	Add some 10.6 URL errors

2015-09-16  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: fix check for pthread setname to work with older
	versions of clang which object to autoconf checking for the
	existence of a function by calling it without args.

2015-09-16 Riccardo Mottola <rm@gnu.org>

	* Headers/Foundation/NSFileManager.h
	* Source/NSFileManager.m
	Add simple (files only and no keys handling) implementation
	of 10.6 method contentsOfDirectoryAtURL.

2015-09-08 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/NSPropertyList.m: Fix writing base64 data.

2015-09-04 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/GSString.m: Optimisation for formatting strings that are
	stored as UTF-16 (use memcpy instead of looping over the characters).
	* Tests/base/NSString/unichar_format.m: Test cases for formatting.

2015-09-01 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/NSRegularExpression.m: Fix handling of empty capture groups.
